modernise code